Fix appearance of b-visually-hidden content when made visible

--- a/public/assets/styles/components/inquire.css
+++ b/public/assets/styles/components/inquire.css
@@ -41,6 +41,7 @@
       @media (--from-m) {
         all: initial;
         color: inherit;
+        font-family: inherit;
       }
     }
   }
