--- a/public/assets/styles/components/traverse.css
+++ b/public/assets/styles/components/traverse.css
@@ -43,6 +43,7 @@
     @media (--from-m) {
       all: initial;
       color: inherit;
+      font-family: inherit;
     }
   }
 }
